--- a/css/weather.css
+++ b/css/weather.css
@@ -45,7 +45,7 @@ body {
     background-color: var(--search-box-background);
     border-radius: 50%;
     font-size: 14px;
-    transition: 0.4 ease;
+    transition: 0.4s ease;
     border: none;
 }
 
