--- a/css/weather.css
+++ b/css/weather.css
@@ -1,5 +1,9 @@
 body {
     background-color: var(--body-background);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .weather__container {
