Added class greeting and functionality for changed text

--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,7 @@
     --input-search:  rgb(30, 6, 55);
     --search-box-btn: #27164f;
     --search-box-background: #e7dfff;
+    --greeting-color: #cdbefb;
 }
 
 .container {
